javaScript file is added
contain function triggered on click of button and change the appearance of the html page by adding and modifying some elements

--- a/Day6/Moving Pic/DOM_Node.html
+++ b/Day6/Moving Pic/DOM_Node.html
@@ -11,12 +11,14 @@
 
 <body>
     <div class="center">
+        <input type="button" value="Change" onclick="change()">
+
         <div id="header">
 
             <img src="dom.jpg" alt="hello..it rains over here:)" />
         </div>
-        <div id="navigation">
-            <ul id="nav">
+        <div id="navigation" >
+            <ul id="nav" >
                 <li><strong>Memo</strong></li>
                 <li><a href="#">Articles</a></li>
                 <li><a href="#">Photos</a></li>
@@ -25,8 +27,9 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
-
     </div>
+    <script src="main.js"></script>
+
 </body>
 
 
