Finish Card Generator
Multiple Scenarios have been handled

--- a/Day6/Card Generator/preview.html
+++ b/Day6/Card Generator/preview.html
@@ -5,10 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preview Your Card</title>
+    <link href="style.css" rel="stylesheet">
+    <script src="cookies.js"></script>
 </head>
 <body>
-   <h1>
-    Preview
-   </h1> 
+    <div class="header">
+        <b>
+            <span>
+                Preview for your card
+            </span>
+        </b>
+    </div>
+
+
+<div id="btnContainer" class="buttonContainer">
+    <input type="button"  id="close-window" name="closePreview", value="close Preview" onclick="closeWindow()">
+</div>
+
+    <script src="preview.js"></script>
+
 </body>
 </html>
