updating some css styling

--- a/Day6/Event Object Tasks/Task3/submission.html
+++ b/Day6/Event Object Tasks/Task3/submission.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div >
-        Submission is completed!
+        <h1 style="color: green;">
+            Submission is completed!
+        </h1>
+        
     </div>
 </body>
 </html>
