update html of the ASCII code

--- a/Day6/Event Object Tasks/Task1/Home.html
+++ b/Day6/Event Object Tasks/Task1/Home.html
@@ -8,6 +8,8 @@
     <title>Day6 - JS - Task1</title>
 </head>
 <body>
-    
+    <h1>
+        Press Shift, ctrl, alt so you can see the <b>ALERT</b>
+    </h1>
 </body>
 </html>
