Update html file of the prevent right click task

--- a/Day6/Event Object Tasks/Task2/Home.html
+++ b/Day6/Event Object Tasks/Task2/Home.html
@@ -8,6 +8,8 @@
     <title>Day6 - JS - Task2</title>
 </head>
 <body>
-    
+    <h1>
+        You will not be able to press right click here, SORRY!
+    </h1>
 </body>
 </html>
